# obsbot-linux

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  obsbot-linux.sh
apps/obsbot-kde/: CMakeLists.txt
apps/obsbot-kde/src/: AiWidget.cpp  AiWidget.h  CameraWidget.cpp  FirmwareWidget.cpp  FirmwareWidget.h  GestureWidget.cpp  GimbalWidget.cpp  GimbalWidget.h  MainWindow.cpp  MainWindow.h  PresetWidget.cpp  Style.h  TrayIcon.cpp  TrayIcon.h  VideoWidget.cpp  VideoWidget.h  main.cpp
apps/obsbot-linux/: CMakeLists.txt
apps/obsbot-linux/src/: AiWidget.cpp  CameraWidget.h  ControlPanel.cpp  ControlPanel.h  FirmwareWidget.cpp  FirmwareWidget.h  GestureWidget.cpp  GimbalWidget.h  ImageWidget.cpp  ImageWidget.h  JoystickPad.cpp  JoystickPad.h  JoystickWidget.h  MainWindow.cpp  PresetBar.h  PresetWidget.h  StatusBar.cpp  VideoWidget.cpp  VideoWidget.h  VideoWindow.cpp  VideoWindow.h  main.cpp
core/: CMakeLists.txt
core/include/obsbot/: DeviceManager.h  GestureManager.h  PresetManager.h
core/src/: DeviceManager.cpp  PresetManager.cpp
data/: obsbot-kde.desktop  obsbot-linux.desktop
docs/: CONTRIBUTING.md
flatpak/: com.github.obsbot-linux.obsbot-kde.json  com.github.obsbot-linux.obsbot-linux.json
obsbot-linux/apps/obsbot-linux/src/: AiWidget.h  FirmwareWidget.cpp  GestureWidget.h  GimbalWidget.cpp  JoystickWidget.cpp  MainWindow.cpp  MainWindow.h  PresetBar.cpp  PresetWidget.cpp  StatusBar.h  Style.h  VideoWidget.cpp
obsbot-linux/core/include/obsbot/: FirmwareManager.h
obsbot-linux/core/src/: DeviceManager.cpp  FirmwareManager.cpp  GestureManager.cpp  PresetManager.cpp
packaging/: 99-obsbot.rules
packaging/deb/: postinst  prerm
packaging/rpm/: post_install.sh  pre_uninstall.sh
sdk/libdev_v2.1.0_8/OBSBOT_Sample/: CMakeLists.txt  main.cpp
sdk/libdev_v2.1.0_8/include/dev/: dev.hpp  devs.hpp
